--- a/ComputerScienceWorks/ComputerScienceWorks.vcxproj.filters
+++ b/ComputerScienceWorks/ComputerScienceWorks.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClInclude Include="pch.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Examples.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ComputerScienceWorks.cpp">
